[package]
name = "hss"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
crossterm = { version = "0.21.0" }
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
